--- a/index.html
+++ b/index.html
@@ -5,49 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RASFE Electric, LLC — Electrician in Houma, LA</title>
   <meta name="description" content="Professional electrician in Houma since 1996. Commercial, industrial, residential, restaurant equipment repair, landscape lighting, inspections & consulting. Licensed #62844. BBB Accredited (A+)." />
-  <link rel="icon" href="/assets/favicon.ico" />
   <style>
-    :root { --bg:#f8fafc; --card:#ffffff; --muted:#475569; --text:#0f172a; --brand:#2563eb; --brand-600:#1d4ed8; --radius:14px; --shadow:0 6px 20px rgba(2,6,23,.08); --max:1100px; }
-    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.7 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-    img{max-width:100%;display:block;border-radius:12px;object-fit:cover;aspect-ratio:4/3}
-    a{color:var(--brand)} a:hover{text-decoration:underline}
+    :root { --bg:#f8fafc; --card:#ffffff; --text:#0f172a; --muted:#475569; --brand:#2563eb; --brand-600:#1d4ed8; --radius:14px; --shadow:0 6px 20px rgba(2,6,23,.08); --max:1100px; }
+    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.7 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
     .container{max-width:var(--max);margin-inline:auto;padding:clamp(16px,3vw,28px)}
     header{background:#fff;border-bottom:1px solid #e2e8f0;position:sticky;top:0;z-index:50}
     .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{font-weight:800} .subtle{color:#334155;font-size:14px}
     .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:999px;background:var(--brand);color:#fff;font-weight:700;border:1px solid var(--brand)}
     .btn:hover{background:var(--brand-600)}
-    .btn.outline{background:#fff;color:var(--brand);border:1px solid var(--brand)}
-    .hero{background:linear-gradient(to bottom, rgba(2,6,23,.35), rgba(2,6,23,.35)), url('https://images.pexels.com/photos/18692781/pexels-photo-18692781.jpeg?auto=compress&cs=tinysrgb&w=1600&dpr=1');background-size:cover;background-position:center}
-    .hero .container{padding-top:64px;padding-bottom:64px}
-    h1{font-size:clamp(28px,4.8vw,48px);line-height:1.15;margin:0 0 10px;color:#fff}
-    .hero p{color:#eef2f7;max-width:60ch;margin:0 0 18px}
-    .badge{display:inline-flex;gap:8px;align-items:center;background:rgba(255,255,255,.95);color:#0f172a;border:1px solid #e2e8f0;padding:6px 10px;border-radius:999px;font-size:14px;margin-right:8px;margin-top:8px}
-    .section{padding:32px 0} .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+    .hero{background:#e2e8f0}
+    .hero .container{padding-top:48px;padding-bottom:48px}
+    h1{font-size:clamp(28px,4.8vw,46px);margin:0 0 8px}
+    .badge{display:inline-flex;gap:8px;align-items:center;background:#fff;color:#0f172a;border:1px solid #e2e8f0;padding:6px 10px;border-radius:999px;font-size:14px;margin-right:8px;margin-top:8px}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     .card{background:var(--card);border:1px solid #e2e8f0;border-radius:12px;box-shadow:var(--shadow);padding:16px;display:flex;flex-direction:column;gap:12px}
-    .kicker{color:#475569;text-transform:uppercase;letter-spacing:.12em;font-size:12px}
-    footer{background:#1f2937;color:#f9fafb;margin-top:24px} footer small{color:#e5e7eb}
-    @media(max-width:880px){.grid{grid-template-columns:1fr} .hero .container{padding-top:46px;padding-bottom:46px}}
+    .thumb{width:100%;aspect-ratio:4/3;border-radius:12px;overflow:hidden;border:1px solid #e5e7eb}
+    img{width:100%;height:100%;object-fit:cover;display:block}
+    @media(max-width:880px){.grid{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
   <header>
     <div class="container nav">
-      <div>
-        <div class="brand">RASFE Electric, LLC</div>
-        <div class="subtle">Call: <a href="tel:+19858601849">(985) 860-1849</a> · Mon–Fri · 8 AM–5 PM</div>
-      </div>
-      <div class="actions">
-        <a class="btn" href="tel:+19858601849">Call (985) 860-1849</a>
-        <a class="btn outline" href="#contact">Request a Quote</a>
-      </div>
+      <strong>RASFE Electric, LLC</strong>
+      <a class="btn" href="tel:+19858601849">Call (985) 860-1849</a>
     </div>
   </header>
 
-  <section class="hero" role="img" aria-label="Louisiana home at night with porch lighting">
+  <section class="hero">
     <div class="container">
       <h1>Grounded. Reliable. Local. Since 1996.</h1>
-      <p>Electrical expertise for commercial, industrial, and residential projects across Terrebonne & Lafourche Parishes. Licensed & insured (#62844). BBB Accredited (A+).</p>
+      <p class="muted">Electrical expertise for commercial, industrial, and residential projects across Terrebonne & Lafourche Parishes. Licensed & insured (#62844). BBB Accredited (A+).</p>
       <div>
         <span class="badge">30 Years Experience</span>
         <span class="badge">License #62844</span>
@@ -56,61 +44,43 @@
     </div>
   </section>
 
-  <main>
-    <section class="section container">
-      <div class="kicker">Services</div>
-      <h2>Electrical work done right</h2>
-      <div class="grid">
-        <div class="card">
-          <img src="https://images.pexels.com/photos/331692/pexels-photo-331692.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=1" alt="Commercial interior lighting in retail/offices">
-          <h3>Commercial Electrical</h3>
-          <p>Upgrades, troubleshooting, lighting retrofits, and maintenance for shops and offices.</p>
-        </div>
-        <div class="card">
-          <img src="https://images.pexels.com/photos/6294888/pexels-photo-6294888.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=1" alt="Industrial electrical cabinets and controls">
-          <h3>Industrial Power & Control</h3>
-          <p>Machinery hookups, conduit, wiring, and motor control for plants and fabrication facilities.</p>
-        </div>
-        <div class="card">
-          <img src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=1" alt="Residential home exterior with warm lighting">
-          <h3>Residential Electrical</h3>
-          <p>Panel upgrades, outlets, switches, and code-safe lighting for local homes.</p>
-        </div>
-        <div class="card">
-          <img src="https://images.pexels.com/photos/3769999/pexels-photo-3769999.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=1" alt="Restaurant kitchen equipment and appliances">
-          <h3>Restaurant & Equipment Repair</h3>
-          <p>Diagnostics and repair for kitchen and equipment power issues. Quick response for restaurants & cafés.</p>
-        </div>
-        <div class="card">
-          <img src="https://images.pexels.com/photos/1399572/pexels-photo-1399572.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=1" alt="Beautiful home with landscape lighting at night">
-          <h3>Landscape Lighting Design & Installation</h3>
-          <p>Accent and security lighting that holds up to South Louisiana weather.</p>
-        </div>
-        <div class="card">
-          <img src="https://images.pexels.com/photos/5251382/pexels-photo-5251382.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=1" alt="Electrician with no hair inspecting panel during consultation">
-          <h3>Electrical Inspections & Consulting</h3>
-          <p>Pre-purchase inspections, system evaluations, and code consulting for homeowners & builders.</p>
-        </div>
+  <main class="container">
+    <h2>Electrical work done right</h2>
+    <div class="grid">
+      <div class="card">
+        <div class="thumb"><img src="/assets/services/commercial.svg" alt="Commercial building"></div>
+        <h3>Commercial Electrical</h3>
+        <p>Upgrades, troubleshooting, lighting retrofits, and maintenance for shops and offices.</p>
       </div>
-    </section>
-
-    <section class="section container" id="contact">
-      <div class="kicker">Contact</div>
-      <h2>Request a free quote</h2>
-      <p><strong>Phone:</strong> <a href="tel:+19858601849">(985) 860-1849</a> · <strong>Email:</strong> <a href="mailto:ronendom@rasfeelectric.com">ronendom@rasfeelectric.com</a><br>
-      <strong>Hours:</strong> Mon–Fri · 8 AM–5 PM · <strong>Service Area:</strong> Terrebonne & Lafourche Parishes</p>
-      <form name="contact" method="POST" data-netlify="true">
-        <input type="hidden" name="form-name" value="contact" />
-        <input name="name" required placeholder="Name">
-        <input name="phone" required placeholder="Phone">
-        <input type="email" name="email" placeholder="Email">
-        <textarea name="message" rows="5" placeholder="How can we help?"></textarea>
-        <button class="btn" type="submit">Send Request</button>
-      </form>
-    </section>
+      <div class="card">
+        <div class="thumb"><img src="/assets/services/industrial.svg" alt="Industrial electrical controls"></div>
+        <h3>Industrial Power & Control</h3>
+        <p>Machinery hookups, conduit, wiring, and motor control for plants and fabrication facilities.</p>
+      </div>
+      <div class="card">
+        <div class="thumb"><img src="/assets/services/residential.svg" alt="Residential home silhouette"></div>
+        <h3>Residential Electrical</h3>
+        <p>Panel upgrades, outlets, switches, and code-safe lighting for local homes.</p>
+      </div>
+      <div class="card">
+        <div class="thumb"><img src="/assets/services/restaurant.svg" alt="Restaurant equipment"></div>
+        <h3>Restaurant & Equipment Repair</h3>
+        <p>Diagnostics and repair for kitchen and equipment power issues. Quick response for restaurants & cafés.</p>
+      </div>
+      <div class="card">
+        <div class="thumb"><img src="/assets/services/landscape.svg" alt="Landscape lighting at a home"></div>
+        <h3>Landscape Lighting Design & Installation</h3>
+        <p>Accent and security lighting that holds up to South Louisiana weather.</p>
+      </div>
+      <div class="card">
+        <div class="thumb"><img src="/assets/services/inspection.svg" alt="Electrical inspection at panel"></div>
+        <h3>Electrical Inspections & Consulting</h3>
+        <p>Pre-purchase inspections, system evaluations, and code consulting for homeowners & builders.</p>
+      </div>
+    </div>
   </main>
 
-  <footer role="contentinfo">
+  <footer class="hero">
     <div class="container">
       <small>© 2025 RASFE Electric, LLC · License #62844 · BBB Accredited (A+) · Insured · Houma, LA · Serving Terrebonne & Lafourche Parishes</small>
     </div>
